# Ramadan_Pyhton-Challenges

./: README.md  mood_log.csv  pyproject.toml  todo.json
src/ramadan_pyhton_challenges/: __init__.py
src/ramadan_pyhton_challenges/day_0/: README.md  main.py
src/ramadan_pyhton_challenges/day_1/: README.md  main.py
src/ramadan_pyhton_challenges/day_10/: README.md  main.py
src/ramadan_pyhton_challenges/day_11/: chainlit.md
src/ramadan_pyhton_challenges/day_12/: Dockerfile  chainlit.yaml  config.py  docker-compose.yml  main.py  requirements.txt  requirnments.txt  start.sh  theme.json  vercel.json
src/ramadan_pyhton_challenges/day_12/.chainlit/: config.toml
src/ramadan_pyhton_challenges/day_2/: main.py
src/ramadan_pyhton_challenges/day_3/: main.py
src/ramadan_pyhton_challenges/day_4/: README.md  api.py  pyproject.toml  vercel.json
src/ramadan_pyhton_challenges/day_5/: main.py
src/ramadan_pyhton_challenges/day_6/: main.py
src/ramadan_pyhton_challenges/day_7/: main.py  mood_log.csv
src/ramadan_pyhton_challenges/day_8/: README.md  main.py
src/ramadan_pyhton_challenges/day_9/: README.md  main.py  styles.css
