[project]
name = "ramadan-pyhton-challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sheikh-Muhammad-Mujtaba", email = "smujtabaja@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.4",
    "streamlit>=1.43.0",
]

[project.scripts]
ramadan-pyhton-challenges = "ramadan_pyhton_challenges:main"
zero = "ramadan_pyhton_challenges.day_0.main:num_guessing_game"
one = "ramadan_pyhton_challenges.day_1.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
