[project]
name = "ramadan-pyhton-challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sheikh-Muhammad-Mujtaba", email = "smujtabaja@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.1",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "google-generativeai>=0.8.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.0",
    "types-requests>=2.32.0.20250306",
]

[project.scripts]
zero = "ramadan_pyhton_challenges.day_0.main:num_guessing_game"

[tool.hatch.build.targets.wheel]
packages = ["src/ramadan_pyhton_challenges"]

[tool.uv.workspace]
members = ["src/ramadan_pyhton_challenges/day_4", "src/ramadan_pyhton_challenges/day_13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
